finish the services manager implementation

--- a/golang/admin/admin_server/config.json
+++ b/golang/admin/admin_server/config.json
@@ -1,32 +1,35 @@
 {
-  "Id": "9939dd67-dc08-41c3-8131-a86f3212a547",
-  "Name": "admin.AdminService",
-  "Domain": "localhost",
-  "Path": "/home/dave/go/src/github.com/globulario/services/golang/admin/admin_server/admin_server",
-  "Proto": "/home/dave/go/src/github.com/globulario/services/proto/admin.proto",
-  "Port": 10029,
-  "Proxy": 10030,
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "Protocol": "grpc",
-  "Version": "0.0.1",
-  "PublisherId": "globulario",
-  "KeepUpToDate": false,
-  "KeepAlive": false,
+  "ApplicationsRoot": "/var/globular/data/files/applications",
+  "CertAuthorityTrust": "",
+  "CertFile": "",
   "Description": "Admin service must be use with priviled",
+  "Discoveries": [],
+  "Domain": "localhost",
+  "Id": "9939dd67-dc08-41c3-8131-a86f3212a547",
+  "KeepAlive": false,
+  "KeepUpToDate": false,
+  "KeyFile": "",
   "Keywords": [
     "Example",
     "admin",
     "Test",
     "Service"
   ],
-  "Repositories": [],
-  "Discoveries": [],
-  "TLS": false,
-  "CertFile": "",
-  "KeyFile": "",
-  "CertAuthorityTrust": "",
+  "Name": "admin.AdminService",
+  "Path": "/home/dave/go/src/github.com/globulario/services/golang/admin/admin_server/admin_server",
   "Permissions": [],
-  "WebRoot": "/var/globular/webroot",
-  "ApplicationsRoot": "/var/globular/data/files/applications"
+  "Port": 10011,
+  "Process": 91749,
+  "Proto": "/home/dave/go/src/github.com/globulario/services/proto/admin.proto",
+  "Protocol": "grpc",
+  "Proxy": 10012,
+  "ProxyProcess": 91765,
+  "PublisherId": "globulario",
+  "Repositories": [],
+  "State": "running",
+  "TLS": false,
+  "Version": "0.0.1",
+  "WebRoot": "/var/globular/webroot"
 }
