--- a/golang/lb/lb_server/config.json
+++ b/golang/lb/lb_server/config.json
@@ -1,30 +1,33 @@
 {
-  "Id": "eaf6f679-093d-460c-b187-c95eb263a940",
-  "Name": "lb.LoadBalancingService",
-  "Domain": "localhost",
-  "Path": "/home/dave/go/src/github.com/globulario/services/golang/lb/lb_server/lb_server",
-  "Proto": "/home/dave/go/src/github.com/globulario/services/proto/lb.proto",
-  "Port": 10029,
-  "Proxy": 10030,
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "Protocol": "grpc",
-  "Version": "0.0.1",
-  "PublisherId": "globulario",
-  "KeepUpToDate": false,
-  "KeepAlive": false,
+  "CertAuthorityTrust": "",
+  "CertFile": "",
   "Description": "The Hello world of gRPC service!",
+  "Discoveries": [],
+  "Domain": "localhost",
+  "Id": "eaf6f679-093d-460c-b187-c95eb263a940",
+  "KeepAlive": false,
+  "KeepUpToDate": false,
+  "KeyFile": "",
   "Keywords": [
     "Example",
     "Echo",
     "Test",
     "Service"
   ],
+  "Name": "lb.LoadBalancingService",
+  "Path": "/home/dave/go/src/github.com/globulario/services/golang/lb/lb_server/lb_server",
+  "Permissions": [],
+  "Port": 10006,
+  "Process": 91482,
+  "Proto": "/home/dave/go/src/github.com/globulario/services/proto/lb.proto",
+  "Protocol": "grpc",
+  "Proxy": 10008,
+  "ProxyProcess": 91489,
+  "PublisherId": "globulario",
   "Repositories": [],
-  "Discoveries": [],
+  "State": "running",
   "TLS": false,
-  "CertFile": "",
-  "KeyFile": "",
-  "CertAuthorityTrust": "",
-  "Permissions": []
+  "Version": "0.0.1"
 }
