--- a/golang/rbac/rbac_server/config.json
+++ b/golang/rbac/rbac_server/config.json
@@ -1,31 +1,34 @@
 {
-  "Id": "8d395eea-bc1b-42fa-b551-ceadf38a6a51",
-  "Name": "rbac.RbacService",
-  "Domain": "localhost",
-  "Path": "/home/dave/go/src/github.com/globulario/services/golang/rbac/rbac_server/rbac_server",
-  "Proto": "/home/dave/go/src/github.com/globulario/services/proto/rbac.proto",
-  "Port": 10031,
-  "Proxy": 10032,
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "Protocol": "grpc",
-  "Version": "0.0.1",
-  "PublisherId": "globulario",
-  "KeepUpToDate": false,
-  "KeepAlive": false,
+  "CertAuthorityTrust": "",
+  "CertFile": "",
   "Description": "The Hello world of gRPC service!",
+  "Discoveries": [],
+  "Domain": "localhost",
+  "Id": "8d395eea-bc1b-42fa-b551-ceadf38a6a51",
+  "KeepAlive": false,
+  "KeepUpToDate": false,
+  "KeyFile": "",
   "Keywords": [
     "Example",
     "rbac",
     "Test",
     "Service"
   ],
+  "Name": "rbac.RbacService",
+  "Path": "/home/dave/go/src/github.com/globulario/services/golang/rbac/rbac_server/rbac_server",
+  "Permissions": [],
+  "Port": 10031,
+  "Process": 91524,
+  "Proto": "/home/dave/go/src/github.com/globulario/services/proto/rbac.proto",
+  "Protocol": "grpc",
+  "Proxy": 10032,
+  "ProxyProcess": 91533,
+  "PublisherId": "globulario",
   "Repositories": [],
-  "Discoveries": [],
-  "TLS": false,
   "Root": "",
-  "CertFile": "",
-  "KeyFile": "",
-  "CertAuthorityTrust": "",
-  "Permissions": []
+  "State": "running",
+  "TLS": false,
+  "Version": "0.0.1"
 }
