--- a/golang/resource/resource_server/config.json
+++ b/golang/resource/resource_server/config.json
@@ -1,32 +1,35 @@
 {
-  "Id": "1f8e8d42-809e-4a0b-8fd9-8b577b5b91e9",
-  "Name": "resource.ResourceService",
-  "Domain": "localhost",
-  "Path": "/home/dave/go/src/github.com/globulario/services/golang/resource/resource_server/resource_server",
-  "Proto": "/home/dave/go/src/github.com/globulario/services/resource.proto",
-  "Port": 10029,
-  "Proxy": 10030,
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "Protocol": "grpc",
-  "Version": "0.0.1",
-  "PublisherId": "globulario",
-  "KeepUpToDate": false,
-  "KeepAlive": false,
+  "Backend_address": "localhost",
+  "Backend_password": "adminadmin",
+  "Backend_port": 27017,
+  "Backend_user": "sa",
+  "CertAuthorityTrust": "",
+  "CertFile": "",
   "Description": "Resource manager service. Resources are Group, Account, Role, Organization and Peer.",
+  "Discoveries": [],
+  "Domain": "localhost",
+  "Id": "1f8e8d42-809e-4a0b-8fd9-8b577b5b91e9",
+  "KeepAlive": false,
+  "KeepUpToDate": false,
+  "KeyFile": "",
   "Keywords": [
     "Resource"
   ],
-  "Repositories": [],
-  "Discoveries": [],
-  "TLS": false,
-  "CertFile": "",
-  "KeyFile": "",
-  "CertAuthorityTrust": "",
+  "Name": "resource.ResourceService",
+  "Path": "/home/dave/go/src/github.com/globulario/services/golang/resource/resource_server/resource_server",
   "Permissions": [],
-  "Backend_address": "localhost",
-  "Backend_port": 27017,
-  "Backend_user": "sa",
-  "Backend_password": "adminadmin",
-  "SessionTimeout": 0
+  "Port": 10013,
+  "Process": 91449,
+  "Proto": "/home/dave/go/src/github.com/globulario/services/resource.proto",
+  "Protocol": "grpc",
+  "Proxy": 10014,
+  "ProxyProcess": 91457,
+  "PublisherId": "globulario",
+  "Repositories": [],
+  "SessionTimeout": 0,
+  "State": "running",
+  "TLS": false,
+  "Version": "0.0.1"
 }
