remove log.Print it will be replace by the logger

--- a/golang/lb/lb_server/config.json
+++ b/golang/lb/lb_server/config.json
@@ -1,15 +1,15 @@
 {
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "CertAuthorityTrust": "",
-  "CertFile": "",
+  "CertAuthorityTrust": "/etc/globular/config/tls/ca.crt",
+  "CertFile": "/etc/globular/config/tls/server.crt",
   "Description": "The Hello world of gRPC service!",
   "Discoveries": [],
-  "Domain": "localhost",
+  "Domain": "globular.cloud",
   "Id": "eaf6f679-093d-460c-b187-c95eb263a940",
   "KeepAlive": false,
   "KeepUpToDate": false,
-  "KeyFile": "",
+  "KeyFile": "/etc/globular/config/tls/server.pem",
   "Keywords": [
     "Example",
     "Echo",
@@ -19,15 +19,16 @@
   "Name": "lb.LoadBalancingService",
   "Path": "/home/dave/go/src/github.com/globulario/services/golang/lb/lb_server/lb_server",
   "Permissions": [],
-  "Port": 10006,
-  "Process": 91482,
+  "Port": 10025,
+  "Process": 28364,
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/lb.proto",
   "Protocol": "grpc",
-  "Proxy": 10008,
-  "ProxyProcess": 91489,
+  "Proxy": 10026,
+  "ProxyProcess": 28373,
   "PublisherId": "globulario",
   "Repositories": [],
   "State": "running",
-  "TLS": false,
-  "Version": "0.0.1"
+  "TLS": true,
+  "Version": "0.0.1",
+  "configPath": "/home/dave/go/src/github.com/globulario/services/golang/lb/lb_server/config.json"
 }
