--- a/golang/resource/resource_server/config.json
+++ b/golang/resource/resource_server/config.json
@@ -5,31 +5,32 @@
   "Backend_password": "adminadmin",
   "Backend_port": 27017,
   "Backend_user": "sa",
-  "CertAuthorityTrust": "",
-  "CertFile": "",
+  "CertAuthorityTrust": "/etc/globular/config/tls/ca.crt",
+  "CertFile": "/etc/globular/config/tls/server.crt",
   "Description": "Resource manager service. Resources are Group, Account, Role, Organization and Peer.",
   "Discoveries": [],
-  "Domain": "localhost",
+  "Domain": "globular.cloud",
   "Id": "1f8e8d42-809e-4a0b-8fd9-8b577b5b91e9",
   "KeepAlive": false,
   "KeepUpToDate": false,
-  "KeyFile": "",
+  "KeyFile": "/etc/globular/config/tls/server.pem",
   "Keywords": [
     "Resource"
   ],
   "Name": "resource.ResourceService",
   "Path": "/home/dave/go/src/github.com/globulario/services/golang/resource/resource_server/resource_server",
   "Permissions": [],
-  "Port": 10013,
-  "Process": 91449,
-  "Proto": "/home/dave/go/src/github.com/globulario/services/resource.proto",
+  "Port": 10045,
+  "Process": 28547,
+  "Proto": "/home/dave/go/src/github.com/globulario/services/proto/resource.proto",
   "Protocol": "grpc",
-  "Proxy": 10014,
-  "ProxyProcess": 91457,
+  "Proxy": 10046,
+  "ProxyProcess": 28565,
   "PublisherId": "globulario",
   "Repositories": [],
   "SessionTimeout": 0,
   "State": "running",
-  "TLS": false,
-  "Version": "0.0.1"
+  "TLS": true,
+  "Version": "0.0.1",
+  "configPath": "/home/dave/go/src/github.com/globulario/services/golang/resource/resource_server/config.json"
 }
