--- a/golang/admin/admin_server/config.json
+++ b/golang/admin/admin_server/config.json
@@ -2,15 +2,15 @@
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
   "ApplicationsRoot": "/var/globular/data/files/applications",
-  "CertAuthorityTrust": "",
-  "CertFile": "",
+  "CertAuthorityTrust": "/etc/globular/config/tls/ca.crt",
+  "CertFile": "/etc/globular/config/tls/server.crt",
   "Description": "Admin service must be use with priviled",
   "Discoveries": [],
-  "Domain": "localhost",
+  "Domain": "globular.cloud",
   "Id": "9939dd67-dc08-41c3-8131-a86f3212a547",
   "KeepAlive": false,
   "KeepUpToDate": false,
-  "KeyFile": "",
+  "KeyFile": "/etc/globular/config/tls/server.pem",
   "Keywords": [
     "Example",
     "admin",
@@ -20,16 +20,17 @@
   "Name": "admin.AdminService",
   "Path": "/home/dave/go/src/github.com/globulario/services/golang/admin/admin_server/admin_server",
   "Permissions": [],
-  "Port": 10011,
-  "Process": 91749,
+  "Port": 10037,
+  "Process": 28400,
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/admin.proto",
   "Protocol": "grpc",
-  "Proxy": 10012,
-  "ProxyProcess": 91765,
+  "Proxy": 10038,
+  "ProxyProcess": 28415,
   "PublisherId": "globulario",
   "Repositories": [],
   "State": "running",
-  "TLS": false,
+  "TLS": true,
   "Version": "0.0.1",
-  "WebRoot": "/var/globular/webroot"
+  "WebRoot": "/var/globular/webroot",
+  "configPath": "/home/dave/go/src/github.com/globulario/services/golang/admin/admin_server/config.json"
 }
