--- a/golang/rbac/rbac_server/config.json
+++ b/golang/rbac/rbac_server/config.json
@@ -1,15 +1,15 @@
 {
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "CertAuthorityTrust": "",
-  "CertFile": "",
+  "CertAuthorityTrust": "/etc/globular/config/tls/ca.crt",
+  "CertFile": "/etc/globular/config/tls/server.crt",
   "Description": "The Hello world of gRPC service!",
   "Discoveries": [],
-  "Domain": "localhost",
+  "Domain": "globular.cloud",
   "Id": "8d395eea-bc1b-42fa-b551-ceadf38a6a51",
   "KeepAlive": false,
   "KeepUpToDate": false,
-  "KeyFile": "",
+  "KeyFile": "/etc/globular/config/tls/server.pem",
   "Keywords": [
     "Example",
     "rbac",
@@ -20,15 +20,16 @@
   "Path": "/home/dave/go/src/github.com/globulario/services/golang/rbac/rbac_server/rbac_server",
   "Permissions": [],
   "Port": 10031,
-  "Process": 91524,
+  "Process": 28252,
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/rbac.proto",
   "Protocol": "grpc",
   "Proxy": 10032,
-  "ProxyProcess": 91533,
+  "ProxyProcess": 28262,
   "PublisherId": "globulario",
   "Repositories": [],
   "Root": "",
   "State": "running",
-  "TLS": false,
-  "Version": "0.0.1"
+  "TLS": true,
+  "Version": "0.0.1",
+  "configPath": "/home/dave/go/src/github.com/globulario/services/golang/rbac/rbac_server/config.json"
 }
