redesign of service_manager to make it simpler

--- a/golang/admin/admin_server/config.json
+++ b/golang/admin/admin_server/config.json
@@ -3,29 +3,31 @@
   "AllowedOrigins": "",
   "ApplicationsRoot": "/var/globular/data/files/applications",
   "CertAuthorityTrust": "/etc/globular/config/tls/ca.crt",
-  "CertFile": "/etc/globular/config/tls/server.crt",
+  "CertFile": "/etc/globular/config/tls/client.crt",
+  "Dependencies": [
+    "rbac.RbacService"
+  ],
   "Description": "Admin service must be use with priviled",
   "Discoveries": [],
   "Domain": "globular.cloud",
-  "Id": "9939dd67-dc08-41c3-8131-a86f3212a547",
+  "Id": "02db7448-1a0c-4bf8-9565-3419d7e5e14e",
   "KeepAlive": false,
   "KeepUpToDate": false,
-  "KeyFile": "/etc/globular/config/tls/server.pem",
+  "KeyFile": "/etc/globular/config/tls/client.pem",
   "Keywords": [
-    "Example",
-    "admin",
-    "Test",
-    "Service"
+    "Manager",
+    "Administrator",
+    "Admin"
   ],
   "Name": "admin.AdminService",
   "Path": "/home/dave/go/src/github.com/globulario/services/golang/admin/admin_server/admin_server",
   "Permissions": [],
-  "Port": 10037,
-  "Process": 28400,
+  "Port": 10015,
+  "Process": 207615,
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/admin.proto",
   "Protocol": "grpc",
-  "Proxy": 10038,
-  "ProxyProcess": 28415,
+  "Proxy": 10023,
+  "ProxyProcess": 207630,
   "PublisherId": "globulario",
   "Repositories": [],
   "State": "running",
