--- a/golang/lb/lb_server/config.json
+++ b/golang/lb/lb_server/config.json
@@ -2,14 +2,14 @@
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
   "CertAuthorityTrust": "/etc/globular/config/tls/ca.crt",
-  "CertFile": "/etc/globular/config/tls/server.crt",
+  "CertFile": "/etc/globular/config/tls/client.crt",
   "Description": "The Hello world of gRPC service!",
   "Discoveries": [],
   "Domain": "globular.cloud",
   "Id": "eaf6f679-093d-460c-b187-c95eb263a940",
   "KeepAlive": false,
   "KeepUpToDate": false,
-  "KeyFile": "/etc/globular/config/tls/server.pem",
+  "KeyFile": "/etc/globular/config/tls/client.pem",
   "Keywords": [
     "Example",
     "Echo",
@@ -19,14 +19,15 @@
   "Name": "lb.LoadBalancingService",
   "Path": "/home/dave/go/src/github.com/globulario/services/golang/lb/lb_server/lb_server",
   "Permissions": [],
-  "Port": 10025,
-  "Process": 28364,
+  "Port": 10019,
+  "Process": 207745,
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/lb.proto",
   "Protocol": "grpc",
-  "Proxy": 10026,
-  "ProxyProcess": 28373,
+  "Proxy": 10024,
+  "ProxyProcess": 207766,
   "PublisherId": "globulario",
   "Repositories": [],
+  "Sate": "running",
   "State": "running",
   "TLS": true,
   "Version": "0.0.1",
