--- a/golang/rbac/rbac_server/config.json
+++ b/golang/rbac/rbac_server/config.json
@@ -2,14 +2,17 @@
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
   "CertAuthorityTrust": "/etc/globular/config/tls/ca.crt",
-  "CertFile": "/etc/globular/config/tls/server.crt",
-  "Description": "The Hello world of gRPC service!",
+  "CertFile": "/etc/globular/config/tls/client.crt",
+  "Dependencies": [
+    "resource.ResourceService"
+  ],
+  "Description": "The authencation server, validate user authentity",
   "Discoveries": [],
   "Domain": "globular.cloud",
-  "Id": "8d395eea-bc1b-42fa-b551-ceadf38a6a51",
+  "Id": "7f2944b1-b670-4ab6-a397-e0aa8a9f3dd7",
   "KeepAlive": false,
   "KeepUpToDate": false,
-  "KeyFile": "/etc/globular/config/tls/server.pem",
+  "KeyFile": "/etc/globular/config/tls/client.pem",
   "Keywords": [
     "Example",
     "rbac",
@@ -19,12 +22,12 @@
   "Name": "rbac.RbacService",
   "Path": "/home/dave/go/src/github.com/globulario/services/golang/rbac/rbac_server/rbac_server",
   "Permissions": [],
-  "Port": 10031,
-  "Process": 28252,
+  "Port": 10005,
+  "Process": 207821,
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/rbac.proto",
   "Protocol": "grpc",
   "Proxy": 10032,
-  "ProxyProcess": 28262,
+  "ProxyProcess": 207830,
   "PublisherId": "globulario",
   "Repositories": [],
   "Root": "",
