--- a/golang/admin/admin_server/config.json
+++ b/golang/admin/admin_server/config.json
@@ -23,14 +23,14 @@
   "Path": "/home/dave/go/src/github.com/globulario/services/golang/admin/admin_server/admin_server",
   "Permissions": [],
   "Port": 10001,
-  "Process": 165356,
+  "Process": -1,
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/admin.proto",
   "Protocol": "grpc",
   "Proxy": 10002,
-  "ProxyProcess": 165367,
+  "ProxyProcess": -1,
   "PublisherId": "globulario",
   "Repositories": [],
-  "State": "running",
+  "State": "stopped",
   "TLS": true,
   "Version": "0.0.1",
   "WebRoot": "/var/globular/webroot",
