--- a/golang/lb/lb_server/config.json
+++ b/golang/lb/lb_server/config.json
@@ -20,14 +20,14 @@
   "Path": "/home/dave/go/src/github.com/globulario/services/golang/lb/lb_server/lb_server",
   "Permissions": [],
   "Port": 10015,
-  "Process": -1,
+  "Process": 234330,
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/lb.proto",
   "Protocol": "grpc",
   "Proxy": 10016,
-  "ProxyProcess": -1,
+  "ProxyProcess": 234341,
   "PublisherId": "globulario",
   "Repositories": [],
-  "State": "stopped",
+  "State": "running",
   "TLS": true,
   "Version": "0.0.1",
   "configPath": "/home/dave/go/src/github.com/globulario/services/golang/lb/lb_server/config.json"
