--- a/golang/rbac/rbac_server/config.json
+++ b/golang/rbac/rbac_server/config.json
@@ -23,15 +23,15 @@
   "Path": "/home/dave/go/src/github.com/globulario/services/golang/rbac/rbac_server/rbac_server",
   "Permissions": [],
   "Port": 10023,
-  "Process": -1,
+  "Process": 234404,
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/rbac.proto",
   "Protocol": "grpc",
   "Proxy": 10024,
-  "ProxyProcess": -1,
+  "ProxyProcess": 234416,
   "PublisherId": "globulario",
   "Repositories": [],
   "Root": "",
-  "State": "stopped",
+  "State": "running",
   "TLS": true,
   "Version": "0.0.1",
   "configPath": "/home/dave/go/src/github.com/globulario/services/golang/rbac/rbac_server/config.json"
