--- a/golang/resource/resource_server/config.json
+++ b/golang/resource/resource_server/config.json
@@ -21,15 +21,15 @@
   "Path": "/home/dave/go/src/github.com/globulario/services/golang/resource/resource_server/resource_server",
   "Permissions": [],
   "Port": 10027,
-  "Process": -1,
+  "Process": 234442,
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/resource.proto",
   "Protocol": "grpc",
   "Proxy": 10028,
-  "ProxyProcess": -1,
+  "ProxyProcess": 234464,
   "PublisherId": "globulario",
   "Repositories": [],
   "SessionTimeout": 0,
-  "State": "stopped",
+  "State": "running",
   "TLS": true,
   "Version": "0.0.1",
   "configPath": "/home/dave/go/src/github.com/globulario/services/golang/resource/resource_server/config.json"
