--- a/golang/resource/resource_server/config.json
+++ b/golang/resource/resource_server/config.json
@@ -25,10 +25,10 @@
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/resource.proto",
   "Protocol": "grpc",
   "Proxy": 10028,
-  "ProxyProcess": 54414,
+  "ProxyProcess": 117940,
   "PublisherId": "globulario",
   "Repositories": [],
-  "SessionTimeout": 0,
+  "SessionTimeout": 1800000,
   "State": "failed",
   "TLS": true,
   "Version": "0.0.1",
