fix dns to work with let's encrypt

--- a/golang/admin/admin_server/config.json
+++ b/golang/admin/admin_server/config.json
@@ -22,15 +22,15 @@
   "Name": "admin.AdminService",
   "Path": "/home/dave/go/src/github.com/globulario/services/golang/admin/admin_server/admin_server",
   "Permissions": [],
-  "Port": 10001,
+  "Port": 10002,
   "Process": -1,
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/admin.proto",
   "Protocol": "grpc",
-  "Proxy": 10002,
+  "Proxy": 10003,
   "ProxyProcess": -1,
   "PublisherId": "globulario",
   "Repositories": [],
-  "State": "failed",
+  "State": "stopped",
   "TLS": true,
   "Version": "0.0.1",
   "WebRoot": "/var/globular/webroot",
