--- a/golang/lb/lb_server/config.json
+++ b/golang/lb/lb_server/config.json
@@ -19,15 +19,15 @@
   "Name": "lb.LoadBalancingService",
   "Path": "/home/dave/go/src/github.com/globulario/services/golang/lb/lb_server/lb_server",
   "Permissions": [],
-  "Port": 10016,
-  "Process": 82285,
+  "Port": 10018,
+  "Process": -1,
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/lb.proto",
   "Protocol": "grpc",
-  "Proxy": 10017,
+  "Proxy": 10019,
   "ProxyProcess": -1,
   "PublisherId": "globulario",
   "Repositories": [],
-  "State": "failed",
+  "State": "stopped",
   "TLS": true,
   "Version": "0.0.1",
   "configPath": "/home/dave/go/src/github.com/globulario/services/golang/lb/lb_server/config.json"
