--- a/golang/rbac/rbac_server/config.json
+++ b/golang/rbac/rbac_server/config.json
@@ -22,16 +22,16 @@
   "Name": "rbac.RbacService",
   "Path": "/home/dave/go/src/github.com/globulario/services/golang/rbac/rbac_server/rbac_server",
   "Permissions": [],
-  "Port": 10024,
-  "Process": 82364,
+  "Port": 10026,
+  "Process": -1,
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/rbac.proto",
   "Protocol": "grpc",
-  "Proxy": 10025,
+  "Proxy": 10027,
   "ProxyProcess": -1,
   "PublisherId": "globulario",
   "Repositories": [],
   "Root": "",
-  "State": "failed",
+  "State": "stopped",
   "TLS": true,
   "Version": "0.0.1",
   "configPath": "/home/dave/go/src/github.com/globulario/services/golang/rbac/rbac_server/config.json"
