--- a/golang/resource/resource_server/config.json
+++ b/golang/resource/resource_server/config.json
@@ -20,16 +20,16 @@
   "Name": "resource.ResourceService",
   "Path": "/home/dave/go/src/github.com/globulario/services/golang/resource/resource_server/resource_server",
   "Permissions": [],
-  "Port": 10028,
+  "Port": 10031,
   "Process": -1,
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/resource.proto",
   "Protocol": "grpc",
-  "Proxy": 10029,
+  "Proxy": 10032,
   "ProxyProcess": -1,
   "PublisherId": "globulario",
   "Repositories": [],
   "SessionTimeout": 1800000,
-  "State": "failed",
+  "State": "stopped",
   "TLS": true,
   "Version": "0.0.1",
   "configPath": "/home/dave/go/src/github.com/globulario/services/golang/resource/resource_server/config.json"
