--- a/golang/admin/admin_server/config.json
+++ b/golang/admin/admin_server/config.json
@@ -9,7 +9,7 @@
   ],
   "Description": "Admin service must be use with priviled",
   "Discoveries": [],
-  "Domain": "globular.cloud",
+  "Domain": "localhost",
   "Id": "02db7448-1a0c-4bf8-9565-3419d7e5e14e",
   "KeepAlive": false,
   "KeepUpToDate": false,
@@ -22,16 +22,16 @@
   "Name": "admin.AdminService",
   "Path": "/home/dave/go/src/github.com/globulario/services/golang/admin/admin_server/admin_server",
   "Permissions": [],
-  "Port": 10002,
+  "Port": 10001,
   "Process": -1,
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/admin.proto",
   "Protocol": "grpc",
-  "Proxy": 10003,
-  "ProxyProcess": -1,
+  "Proxy": 10002,
+  "ProxyProcess": 705659,
   "PublisherId": "globulario",
   "Repositories": [],
-  "State": "stopped",
-  "TLS": true,
+  "State": "failed",
+  "TLS": false,
   "Version": "0.0.1",
   "WebRoot": "/var/globular/webroot",
   "configPath": "/home/dave/go/src/github.com/globulario/services/golang/admin/admin_server/config.json"
