--- a/golang/lb/lb_server/config.json
+++ b/golang/lb/lb_server/config.json
@@ -5,7 +5,7 @@
   "CertFile": "/etc/globular/config/tls/client.crt",
   "Description": "The Hello world of gRPC service!",
   "Discoveries": [],
-  "Domain": "globular.cloud",
+  "Domain": "localhost",
   "Id": "eaf6f679-093d-460c-b187-c95eb263a940",
   "KeepAlive": false,
   "KeepUpToDate": false,
@@ -19,16 +19,16 @@
   "Name": "lb.LoadBalancingService",
   "Path": "/home/dave/go/src/github.com/globulario/services/golang/lb/lb_server/lb_server",
   "Permissions": [],
-  "Port": 10018,
-  "Process": -1,
+  "Port": 10017,
+  "Process": 705856,
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/lb.proto",
   "Protocol": "grpc",
-  "Proxy": 10019,
-  "ProxyProcess": -1,
+  "Proxy": 10018,
+  "ProxyProcess": 705868,
   "PublisherId": "globulario",
   "Repositories": [],
-  "State": "stopped",
-  "TLS": true,
+  "State": "running",
+  "TLS": false,
   "Version": "0.0.1",
   "configPath": "/home/dave/go/src/github.com/globulario/services/golang/lb/lb_server/config.json"
 }
