--- a/golang/rbac/rbac_server/config.json
+++ b/golang/rbac/rbac_server/config.json
@@ -8,7 +8,7 @@
   ],
   "Description": "The authencation server, validate user authentity",
   "Discoveries": [],
-  "Domain": "globular.cloud",
+  "Domain": "localhost",
   "Id": "7f2944b1-b670-4ab6-a397-e0aa8a9f3dd7",
   "KeepAlive": false,
   "KeepUpToDate": false,
@@ -22,17 +22,17 @@
   "Name": "rbac.RbacService",
   "Path": "/home/dave/go/src/github.com/globulario/services/golang/rbac/rbac_server/rbac_server",
   "Permissions": [],
-  "Port": 10026,
-  "Process": -1,
+  "Port": 10025,
+  "Process": 705933,
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/rbac.proto",
   "Protocol": "grpc",
-  "Proxy": 10027,
-  "ProxyProcess": -1,
+  "Proxy": 10026,
+  "ProxyProcess": 705942,
   "PublisherId": "globulario",
   "Repositories": [],
   "Root": "",
-  "State": "stopped",
-  "TLS": true,
+  "State": "running",
+  "TLS": false,
   "Version": "0.0.1",
   "configPath": "/home/dave/go/src/github.com/globulario/services/golang/rbac/rbac_server/config.json"
 }
