--- a/golang/resource/resource_server/config.json
+++ b/golang/resource/resource_server/config.json
@@ -9,7 +9,7 @@
   "CertFile": "/etc/globular/config/tls/client.crt",
   "Description": "Resource manager service. Resources are Group, Account, Role, Organization and Peer.",
   "Discoveries": [],
-  "Domain": "globular.cloud",
+  "Domain": "localhost",
   "Id": "1f8e8d42-809e-4a0b-8fd9-8b577b5b91e9",
   "KeepAlive": false,
   "KeepUpToDate": false,
@@ -20,17 +20,17 @@
   "Name": "resource.ResourceService",
   "Path": "/home/dave/go/src/github.com/globulario/services/golang/resource/resource_server/resource_server",
   "Permissions": [],
-  "Port": 10031,
+  "Port": 10029,
   "Process": -1,
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/resource.proto",
   "Protocol": "grpc",
-  "Proxy": 10032,
-  "ProxyProcess": -1,
+  "Proxy": 10030,
+  "ProxyProcess": 705990,
   "PublisherId": "globulario",
   "Repositories": [],
   "SessionTimeout": 1800000,
-  "State": "stopped",
-  "TLS": true,
+  "State": "failed",
+  "TLS": false,
   "Version": "0.0.1",
   "configPath": "/home/dave/go/src/github.com/globulario/services/golang/resource/resource_server/config.json"
 }
