append mac in the configuration of each services.

--- a/golang/lb/lb_server/config.json
+++ b/golang/lb/lb_server/config.json
@@ -5,7 +5,7 @@
   "CertFile": "/etc/globular/config/tls/client.crt",
   "Description": "The Hello world of gRPC service!",
   "Discoveries": [],
-  "Domain": "localhost",
+  "Domain": "peer0.globular.cloud",
   "Id": "eaf6f679-093d-460c-b187-c95eb263a940",
   "KeepAlive": false,
   "KeepUpToDate": false,
@@ -20,15 +20,15 @@
   "Path": "/home/dave/go/src/github.com/globulario/services/golang/lb/lb_server/lb_server",
   "Permissions": [],
   "Port": 10017,
-  "Process": 705856,
+  "Process": 552779,
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/lb.proto",
   "Protocol": "grpc",
   "Proxy": 10018,
-  "ProxyProcess": 705868,
+  "ProxyProcess": 552792,
   "PublisherId": "globulario",
   "Repositories": [],
   "State": "running",
-  "TLS": false,
+  "TLS": true,
   "Version": "0.0.1",
   "configPath": "/home/dave/go/src/github.com/globulario/services/golang/lb/lb_server/config.json"
 }
