--- a/golang/rbac/rbac_server/config.json
+++ b/golang/rbac/rbac_server/config.json
@@ -8,7 +8,7 @@
   ],
   "Description": "The authencation server, validate user authentity",
   "Discoveries": [],
-  "Domain": "localhost",
+  "Domain": "peer0.globular.cloud",
   "Id": "7f2944b1-b670-4ab6-a397-e0aa8a9f3dd7",
   "KeepAlive": false,
   "KeepUpToDate": false,
@@ -23,16 +23,16 @@
   "Path": "/home/dave/go/src/github.com/globulario/services/golang/rbac/rbac_server/rbac_server",
   "Permissions": [],
   "Port": 10025,
-  "Process": 705933,
+  "Process": 552848,
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/rbac.proto",
   "Protocol": "grpc",
   "Proxy": 10026,
-  "ProxyProcess": 705942,
+  "ProxyProcess": 552862,
   "PublisherId": "globulario",
   "Repositories": [],
   "Root": "",
   "State": "running",
-  "TLS": false,
+  "TLS": true,
   "Version": "0.0.1",
   "configPath": "/home/dave/go/src/github.com/globulario/services/golang/rbac/rbac_server/config.json"
 }
