--- a/golang/admin/admin_server/config.json
+++ b/golang/admin/admin_server/config.json
@@ -9,7 +9,7 @@
   ],
   "Description": "Admin service must be use with priviled",
   "Discoveries": [],
-  "Domain": "localhost",
+  "Domain": "peer0.globular.cloud",
   "Id": "02db7448-1a0c-4bf8-9565-3419d7e5e14e",
   "KeepAlive": false,
   "KeepUpToDate": false,
@@ -27,11 +27,11 @@
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/admin.proto",
   "Protocol": "grpc",
   "Proxy": 10002,
-  "ProxyProcess": 705659,
+  "ProxyProcess": 552584,
   "PublisherId": "globulario",
   "Repositories": [],
   "State": "failed",
-  "TLS": false,
+  "TLS": true,
   "Version": "0.0.1",
   "WebRoot": "/var/globular/webroot",
   "configPath": "/home/dave/go/src/github.com/globulario/services/golang/admin/admin_server/config.json"
