almost done with peers.

--- a/golang/admin/admin_server/config.json
+++ b/golang/admin/admin_server/config.json
@@ -19,6 +19,7 @@
     "Administrator",
     "Admin"
   ],
+  "Mac": "00:1f:c6:9c:d3:34",
   "Name": "admin.AdminService",
   "Path": "/home/dave/go/src/github.com/globulario/services/golang/admin/admin_server/admin_server",
   "Permissions": [],
@@ -27,10 +28,10 @@
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/admin.proto",
   "Protocol": "grpc",
   "Proxy": 10002,
-  "ProxyProcess": 552584,
+  "ProxyProcess": -1,
   "PublisherId": "globulario",
   "Repositories": [],
-  "State": "failed",
+  "State": "stopped",
   "TLS": true,
   "Version": "0.0.1",
   "WebRoot": "/var/globular/webroot",
