--- a/golang/lb/lb_server/config.json
+++ b/golang/lb/lb_server/config.json
@@ -16,18 +16,19 @@
     "Test",
     "Service"
   ],
+  "Mac": "00:1f:c6:9c:d3:34",
   "Name": "lb.LoadBalancingService",
   "Path": "/home/dave/go/src/github.com/globulario/services/golang/lb/lb_server/lb_server",
   "Permissions": [],
   "Port": 10017,
-  "Process": 552779,
+  "Process": -1,
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/lb.proto",
   "Protocol": "grpc",
   "Proxy": 10018,
-  "ProxyProcess": 552792,
+  "ProxyProcess": -1,
   "PublisherId": "globulario",
   "Repositories": [],
-  "State": "running",
+  "State": "stopped",
   "TLS": true,
   "Version": "0.0.1",
   "configPath": "/home/dave/go/src/github.com/globulario/services/golang/lb/lb_server/config.json"
