--- a/golang/rbac/rbac_server/config.json
+++ b/golang/rbac/rbac_server/config.json
@@ -19,19 +19,20 @@
     "Test",
     "Service"
   ],
+  "Mac": "00:1f:c6:9c:d3:34",
   "Name": "rbac.RbacService",
   "Path": "/home/dave/go/src/github.com/globulario/services/golang/rbac/rbac_server/rbac_server",
   "Permissions": [],
   "Port": 10025,
-  "Process": 552848,
+  "Process": -1,
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/rbac.proto",
   "Protocol": "grpc",
   "Proxy": 10026,
-  "ProxyProcess": 552862,
+  "ProxyProcess": -1,
   "PublisherId": "globulario",
   "Repositories": [],
   "Root": "",
-  "State": "running",
+  "State": "stopped",
   "TLS": true,
   "Version": "0.0.1",
   "configPath": "/home/dave/go/src/github.com/globulario/services/golang/rbac/rbac_server/config.json"
