--- a/golang/resource/resource_server/config.json
+++ b/golang/resource/resource_server/config.json
@@ -17,6 +17,7 @@
   "Keywords": [
     "Resource"
   ],
+  "Mac": "00:1f:c6:9c:d3:34",
   "Name": "resource.ResourceService",
   "Path": "/home/dave/go/src/github.com/globulario/services/golang/resource/resource_server/resource_server",
   "Permissions": [],
@@ -25,11 +26,11 @@
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/resource.proto",
   "Protocol": "grpc",
   "Proxy": 10030,
-  "ProxyProcess": 552914,
+  "ProxyProcess": -1,
   "PublisherId": "globulario",
   "Repositories": [],
   "SessionTimeout": 1800000,
-  "State": "failed",
+  "State": "stopped",
   "TLS": true,
   "Version": "0.0.1",
   "configPath": "/home/dave/go/src/github.com/globulario/services/golang/resource/resource_server/config.json"
