--- a/golang/resource/resource_server/config.json
+++ b/golang/resource/resource_server/config.json
@@ -30,7 +30,7 @@
   "PublisherId": "globulario",
   "Repositories": [],
   "SessionTimeout": 1800000,
-  "State": "stopped",
+  "State": "failed",
   "TLS": true,
   "Version": "0.0.1",
   "configPath": "/home/dave/go/src/github.com/globulario/services/golang/resource/resource_server/config.json"
