fix path on windows

--- a/golang/lb/lb_server/config.json
+++ b/golang/lb/lb_server/config.json
@@ -1,35 +1,36 @@
 {
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "CertAuthorityTrust": "/etc/globular/config/tls/ca.crt",
-  "CertFile": "/etc/globular/config/tls/client.crt",
+  "CertAuthorityTrust": "",
+  "CertFile": "",
+  "Dependencies": [],
   "Description": "The Hello world of gRPC service!",
   "Discoveries": [],
-  "Domain": "peer0.globular.cloud",
-  "Id": "eaf6f679-093d-460c-b187-c95eb263a940",
+  "Domain": "localhost",
+  "Id": "8e4372e3-0804-4148-aef2-655a9836686d",
   "KeepAlive": false,
   "KeepUpToDate": false,
-  "KeyFile": "/etc/globular/config/tls/client.pem",
+  "KeyFile": "",
   "Keywords": [
     "Example",
     "Echo",
     "Test",
     "Service"
   ],
-  "Mac": "00:1f:c6:9c:d3:34",
+  "Mac": "d8:3b:bf:1e:4b:e6",
   "Name": "lb.LoadBalancingService",
-  "Path": "/home/dave/go/src/github.com/globulario/services/golang/lb/lb_server/lb_server",
+  "Path": "C:/Users/mm006819/Documents/globulario/services/golang/lb/lb_server/lb_server.exe",
   "Permissions": [],
-  "Port": 10017,
-  "Process": -1,
-  "Proto": "/home/dave/go/src/github.com/globulario/services/proto/lb.proto",
+  "Port": 10018,
+  "Process": 17880,
+  "Proto": "C:\\Users\\mm006819\\Documents\\globulario\\services/proto/lb.proto",
   "Protocol": "grpc",
-  "Proxy": 10018,
+  "Proxy": 10019,
   "ProxyProcess": -1,
   "PublisherId": "globulario",
   "Repositories": [],
   "State": "failed",
-  "TLS": true,
+  "TLS": false,
   "Version": "0.0.1",
-  "configPath": "/home/dave/go/src/github.com/globulario/services/golang/lb/lb_server/config.json"
+  "configPath": "C:/Users/mm006819/Documents/globulario/services/golang/lb/lb_server/config.json"
 }
