--- a/golang/lb/lb_server/config.json
+++ b/golang/lb/lb_server/config.json
@@ -1,8 +1,8 @@
 {
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "CertAuthorityTrust": "",
-  "CertFile": "",
+  "CertAuthorityTrust": "/etc/globular/config/tls/ca.crt",
+  "CertFile": "/etc/globular/config/tls/client.crt",
   "Dependencies": [],
   "Description": "The Hello world of gRPC service!",
   "Discoveries": [],
@@ -10,27 +10,27 @@
   "Id": "8e4372e3-0804-4148-aef2-655a9836686d",
   "KeepAlive": false,
   "KeepUpToDate": false,
-  "KeyFile": "",
+  "KeyFile": "/etc/globular/config/tls/client.pem",
   "Keywords": [
     "Example",
     "Echo",
     "Test",
     "Service"
   ],
-  "Mac": "d8:3b:bf:1e:4b:e6",
+  "Mac": "00:1f:c6:9c:d3:34",
   "Name": "lb.LoadBalancingService",
-  "Path": "C:/Users/mm006819/Documents/globulario/services/golang/lb/lb_server/lb_server.exe",
+  "Path": "/home/dave/go/src/github.com/globulario/services/golang/lb/lb_server//lb_server.exe",
   "Permissions": [],
-  "Port": 10018,
-  "Process": 17880,
-  "Proto": "C:\\Users\\mm006819\\Documents\\globulario\\services/proto/lb.proto",
+  "Port": 10017,
+  "Process": -1,
+  "Proto": "/home/dave/go/src/github.com/globulario/services/proto/lb.proto",
   "Protocol": "grpc",
-  "Proxy": 10019,
+  "Proxy": 10018,
   "ProxyProcess": -1,
   "PublisherId": "globulario",
   "Repositories": [],
   "State": "failed",
   "TLS": false,
   "Version": "0.0.1",
-  "configPath": "C:/Users/mm006819/Documents/globulario/services/golang/lb/lb_server/config.json"
+  "configPath": "/home/dave/go/src/github.com/globulario/services/golang/lb/lb_server/config.json"
 }
