change paremeter when starting service, the id and the ConfigPath is now given at start time

--- a/csharp/GlobularServer/GlobularServer.csproj
+++ b/csharp/GlobularServer/GlobularServer.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="System.Security.Claims" Version="4.3.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\config\GlobularConfigClient\GlobularConfigClient.csproj" />
     <ProjectReference Include="..\resource\GlobularResourceClient\GlobularResourceClient.csproj" />
     <ProjectReference Include="..\rbac\GlobularRbacClient\GlobularRbacClient.csproj" />
     <ProjectReference Include="..\lb\GlobularLoadBalancingClient\GlobularLoadBalancingClient.csproj" />
