--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,12 +1,12 @@
 {
   "name": "globular-web-client",
-  "version": "1.1.239",
+  "version": "1.1.240",
   "description": "Globular client side",
   "main": "./services.js",
   "types": "./services.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build_": "tsc  &&  cp package.json dist/ &&  cp -r authentication dist/ && cp -r services_manager dist/ && cp -r applications_manager dist/ && cp -r blog dist/ && cp -r conversation dist/ && cp -r rbac dist/ && cp -r log dist/ && cp -r resource dist/ && cp -r repository dist/ && cp -r discovery dist/  && cp -r admin dist/ && cp -r spc dist/ && cp -r search dist/ && cp  -r catalog dist/ && cp -r echo dist/ && cp -r event dist/ && cp -r file dist/ && cp -r ldap dist/ && cp -r monitoring dist/ && cp -r persistence dist/ && cp -r mail dist/ && cp -r mail dist/ && cp -r sql dist/ && cp -r storage dist/",
+    "build_": "tsc  &&  cp package.json dist/ && cp -r title dist/ && cp -r authentication dist/ && cp -r services_manager dist/ && cp -r applications_manager dist/ && cp -r blog dist/ && cp -r conversation dist/ && cp -r rbac dist/ && cp -r log dist/ && cp -r resource dist/ && cp -r repository dist/ && cp -r discovery dist/  && cp -r admin dist/ && cp -r spc dist/ && cp -r search dist/ && cp  -r catalog dist/ && cp -r echo dist/ && cp -r event dist/ && cp -r file dist/ && cp -r ldap dist/ && cp -r monitoring dist/ && cp -r persistence dist/ && cp -r mail dist/ && cp -r mail dist/ && cp -r sql dist/ && cp -r storage dist/",
     "build": "",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "prepare": "npm run build",
