--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "globular-web-client",
-  "version": "1.1.338",
+  "version": "1.1.341",
   "description": "Globular client side",
   "main": "./services.js",
   "types": "./services.d.ts",
@@ -18,11 +18,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/google-protobuf": "^3.15.5",
-    "google-protobuf": "^3.18.1",
+    "google-protobuf": "^3.21.2",
     "grpc-web": "^1.3.0"
   },
   "devDependencies": {
-    "typescript": "^4.4.4",
-    "jwt-decode": "^2.2.0"
+    "jwt-decode": "^2.2.0",
+    "typescript": "^4.4.4"
   }
 }
