--- a/golang/globularcli/Makefile
+++ b/golang/globularcli/Makefile
@@ -1,26 +1,25 @@
-.PHONY: specgen
+.PHONY: specgen pkggen all-packages
+
+STAGE_BIN_DIR ?= /home/dave/Documents/github.com/globulario/services/golang/tools/stage/linux-amd64/usr/local/bin
+GEN_DIR ?= $(CURDIR)/generated
+PKG_OUT ?= $(GEN_DIR)/packages
+PKG_VERSION ?= 0.0.1
+PKG_PUBLISHER ?= core@globular.io
+PKG_PLATFORM ?= $(shell go env GOOS)_$(shell go env GOARCH)
+GLOBULARCLI ?= $(CURDIR)/globularcli
 
 specgen:
-	./tools/specgen/specgen.sh \
-	  /home/dave/Documents/github.com/globulario/services/golang/tools/stage/linux-amd64/usr/local/bin \
-	  ./generated
+	./tools/specgen/specgen.sh "$(STAGE_BIN_DIR)" "$(GEN_DIR)"
 
-# --- Package generation defaults ---
-PKGGEN_BIN_DIR ?= /home/dave/Documents/github.com/globulario/services/golang/tools/stage/linux-amd64/usr/local/bin
-PKGGEN_GEN_ROOT ?= $(CURDIR)/generated
-PKGGEN_OUT ?= $(CURDIR)/generated/packages
-PKGGEN_VERSION ?= 0.0.1
-PKGGEN_PUBLISHER ?= core@globular.io
-PKGGEN_PLATFORM ?= $(shell go env GOOS)_$(shell go env GOARCH)
-PKGGEN_GLOBULAR ?= globular
-
-.PHONY: pkggen
 pkggen: specgen
 	./tools/pkggen/pkggen.sh \
-	  --globular "$(PKGGEN_GLOBULAR)" \
-	  --bin-dir "$(PKGGEN_BIN_DIR)" \
-	  --gen-root "$(PKGGEN_GEN_ROOT)" \
-	  --out "$(PKGGEN_OUT)" \
-	  --version "$(PKGGEN_VERSION)" \
-	  --publisher "$(PKGGEN_PUBLISHER)" \
-	  --platform "$(PKGGEN_PLATFORM)"
+	  --globular "$(GLOBULARCLI)" \
+	  --bin-dir "$(STAGE_BIN_DIR)" \
+	  --gen-root "$(GEN_DIR)" \
+	  --out "$(PKG_OUT)" \
+	  --version "$(PKG_VERSION)" \
+	  --publisher "$(PKG_PUBLISHER)" \
+	  --platform "$(PKG_PLATFORM)"
+
+all-packages: pkggen
+	@echo "Packages available in: $(PKG_OUT)"
